# CUDAatScaleForTheEnterpriseCourseProject

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh
docs/: sample_execution_log.txt
output/: processing_log.txt
src/: image_kernels.cuh  image_utils.cpp  image_utils.h  main.cu  stb_image.h  stb_image_write.h
